<resources>
    <string name="app_name">CanalDeDenuncias</string>
    <string name="elegir_el_tema_pricipal">Elegir el tema pricipal :</string>
    <string name="continuar">Continuar</string>
    <string name="incumplimiento_normativo_o_delito">Incumplimiento normativo o delito</string>
    <string name="incumplimiento_del_c_digo_tico">Incumplimiento del código ético</string>
    <string name="acoso_laboral">Acoso laboral</string>
    <string name="acoso_sexual_o_por_raz_n_de_sexo">Acoso sexual o por razón de sexo</string>
    <string name="describa_detalladamente_el_incidente">Describa detalladamente el incidente :</string>
    <string name="nombre">Nombre*</string>
    <string name="apellidos">Apellidos*</string>
    <string name="denuncia_an_nima">¿Denuncia anónima?</string>
    <string name="n_mero_de_m_vil">Número de móvil*</string>
    <string name="relaci_n_con_la_organizaci_n">Relación con la organización*</string>
    <string name="empleado">Empleado</string>
    <string name="cliente">Cliente</string>
    <string name="proveedor">Proveedor</string>
    <string name="correo_electr_nico">Correo electrónico*</string>
    <string name="seleccionar_archivo">Seleccionar archivo</string>
    <string name="detalle_de_la_denuncia">Detalle de la denuncia*</string>
    <string name="adjuntar_archivo_ning_n_archivo_seleccionado">Adjuntar archivo - Ningún archivo seleccionado</string>
    <string name="asunto_de_la_denuncia">Asunto de la denuncia</string>
    <string name="formulario_de_denuncia">Formulario de denuncia</string>
    <string name="enviar">Enviar</string>
    <string name="correo_electr_nico_de_alta">Correo electrónico de alta*</string>
    <string name="recuperar_contrase_a">RECUPERAR CONTRASEÑA</string>
</resources>