<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="1dp"
    android:layout_marginTop="1dp"
    android:background="#D2D0D0"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvTituloFormulario"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/formulario_de_denuncia"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutAsunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeleccionPrincipal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:textAlignment="center" />
    </LinearLayout>

    <Switch
        android:id="@+id/switchIdentidad"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:minHeight="48dp"
        android:text="@string/denuncia_an_nima" />

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/correo_electr_nico"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/n_mero_de_m_vil"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvRelacionConOrg"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/relaci_n_con_la_organizaci_n"
        android:textAlignment="center"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbEmpleado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/empleado"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/cliente"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbProveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="@string/proveedor"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAdjuntarArchivo"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/adjuntar_archivo_ning_n_archivo_seleccionado"
        android:textAlignment="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#000000"
        android:text="@string/seleccionar_archivo"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvAsuntoDenuncia"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/asunto_de_la_denuncia"
        android:textAlignment="center"
        android:textColor="#7D7D7D"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutAsunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FDFDFD"
            android:backgroundTint="#F8F6F6" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvIncidente"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/detalle_de_la_denuncia"
        android:textAlignment="center"
        android:textColor="#7D7D7D" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDetalleDenuncia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/enviar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

</LinearLayout>
