<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etCorreoPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2D0D0">

    <TextView
        android:id="@+id/tvRecuperarPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/recuperar_contrase_a"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="390dp"
        android:layout_height="53dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/correo_electr_nico_de_alta"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecuperarPass" />

    <Button
        android:id="@+id/btnEnviarCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="59dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/enviar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

</androidx.constraintlayout.widget.ConstraintLayout>